--- a/css/style.css
+++ b/css/style.css
@@ -713,7 +713,7 @@ Header section
 }
 
 .latest-news-widget.top-five .ln-item:nth-child(4) .ln-index {
-	background: #ffe119;
+	background: #ff94f3;
 }
 
 .latest-news-widget.top-five .ln-item:nth-child(5) .ln-index {
