--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,47 @@ ol {
 	margin: 0;
 }
 
+/* ------------------------------------------------------------------- 
+ * ## go to top HERE YA DUMMY
+ * ------------------------------------------------------------------- */
+/*.go-top {
+  z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translate3d(0, 200%, 0);
+  transform: translate3d(0, 200%, 0);
+  transition: all 0.8s;
+  position: fixed;
+  bottom: 4rem;
+  right: 2rem;
+}
+
+.go-top a,
+.go-top a:visited {
+  text-decoration: none;
+  border: none;
+  display: block;
+  height: 6rem;
+  width: 6rem;
+  line-height: 6rem;
+  text-align: center;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.5);
+  transition: all 0.3s;
+  background-image: url(../img/icons/icon-arrow-up.svg);
+  background-color: #000000;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 7px 14px;
+}
+
+.go-top.link-is-visible {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
 /*---------------------
 Helper CSS
  -----------------------*/
