--- a/css/style.css
+++ b/css/style.css
@@ -172,18 +172,19 @@ Commom elements
 	font-weight: 600;
 	min-width: 164px;
 	padding: 21px 47px;
-	border-radius: 50px;
+	border-radius: 4px;
 	text-transform: uppercase;
-	//background: #10ddb4;
+	background: #10ddb4;
     background: linear-gradient(to top left, #ff99cc 0%, #33ccff 100%);
-	color: #161616;
+	color: #000000;
 	line-height: 1;
 	cursor: pointer;
 	text-align: center;
 }
 
 .site-btn:hover {
-	color: #161616;
+	color: #FFFFFF;
+	box-shadow: 10px 5px #353535;
 }
 
 .site-btn.sb-color {
@@ -459,17 +460,32 @@ Header section
    Blog-section
  ---------------------*/
 /*New stuff here*/
-#blogs
-{
-	color: #FFFFFF;
-}
-
-#blogs:hover
+.hoverCarHeader:hover
 {
 	padding: 21px 55px 20px;
 	background-color: #222222;
 	color: #bbbbbb;
 }
+
+.hoverCarText:hover
+{
+	padding: 5px 5px;
+	background-color: #444444;
+	color: #bbbbbb;
+}
+
+.hoverCarText2
+{
+	 color: #8C8C8C;
+}
+
+.hoverCarText2:hover
+{
+	padding: 5px 5px;
+	background-color: #444444;
+	color: #FFFFFF;
+}
+
 /*New stuff ends here*/
 .blog-section {
 	background: #1c1c1c;
@@ -540,8 +556,12 @@ Header section
 	display: none;
 }
 
-.blog-post .post-metas a {
-	color: #33cc33;;
+/*.blog-post .post-metas a {
+	color: #000000;
+}*/
+
+.blog-post .post-metas a:hover {
+	color: #FFFFFF;
 }
 
 .blog-post .read-more {
@@ -1729,6 +1749,7 @@ Responsive
 @media only screen and (max-width: 767px) {
 	.site-logo {
 		padding: 20px 15px;
+		background-color: #222222;
 	}
 	.main-menu,
 	.header-add {
