--- a/css/style.css
+++ b/css/style.css
@@ -749,7 +749,7 @@ Header section
 }
 
 .latest-news-widget .ln-text .ln-metas a {
-	color: #33cc33;;
+	color: #000000;
 }
 
 .latest-news-widget.top-five .ln-index {
